--- a/styled.css
+++ b/styled.css
@@ -22,6 +22,7 @@ body {
     font-size: 40px;
     font-weight: bold;
     color: black;
+    background-color: white;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 0;
