--- a/yes_style.css
+++ b/yes_style.css
@@ -11,6 +11,7 @@ body {
     font-size: 50px;
     font-weight: bold;
     color: black;
+    background-color: bisque;
     text-align: center;
     margin-top: 20px;
     margin-bottom: 0px;
